--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 }
 
 body {
+  font-family: var(--font-fam);
   background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
   min-height: 100vh;
 }
