--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,5 @@ body {
   font-family: var(--font-fam);
   background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
   min-height: 100vh;
+  padding: 30px 0;
 }
